--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
   "name": "moleculer-json-schema-validator",
-  "version": "2.2.0",
-  "description": "validate moleculer params by json schema",
+  "version": "3.0.0",
+  "description": "json-schema validator for moleculer",
   "keywords": [
     "moleculer",
     "json schema"
   ],
-  "repository": "https://github.com/zhaoyao91/moleculer-json-schema-validator",
+  "repository": "https://github.com/pibi/moleculer-json-schema-validator",
   "main": "index.js",
-  "author": "zhaoyao91 <zhaoyao91@163.com>",
+  "authors": [
+    "zhaoyao91 <zhaoyao91@163.com>",
+    "pianobit <info@pianobit.com> (http://pianobit.com)"
+  ],
   "license": "MIT",
+  "devDependencies": {
+    "eslint": "^7.23.0",
+    "jest": "^26.6.3",
+    "jest-cli": "^26.6.3",
+    "moleculer": "^0.14.16"
+  },
   "dependencies": {
     "ajv": "^8.x.x",
     "ajv-formats": "^2.1.1",
